name: learnyou
version: 0.0.0
cabal-version: >= 1.8
build-type: Simple
author: Peter Harpending
maintainer: peter@harpending.org
license: AGPL-3
license-file: LICENSE
synopsis: The source for <https://learnyou.org>
description:
  <https://learnyou.org> is the site for /Learn You Some Algebras for Glorious
  Good!/ (LYSA). LYSA is a fun, easy-to-read math textbook inspired by
  <http://learnyouahaskell.com/ Learn You a Haskell for Great Good!>.

flag dev
  description: Turn on development settings, like auto-reload templates.
  default: False

flag library-only
  description: Build for use with "yesod devel"
  default: False

library
    hs-source-dirs: ., app
    exposed-modules:
      Application
      Foundation
      Handler.Common
      Handler.Pages
      Import
      Import.NoFoundation
      Model
      Settings
      Settings.StaticFiles
    if flag(dev) || flag(library-only)
      cpp-options: -DDEVELOPMENT
      ghc-options: -Wall -fwarn-tabs -O0
    else
      ghc-options: -Wall -fwarn-tabs -O2
    extensions:
      CPP
      DeriveDataTypeable
      EmptyDataDecls
      FlexibleContexts
      GADTs
      GeneralizedNewtypeDeriving
      MultiParamTypeClasses
      NoImplicitPrelude
      NoMonomorphismRestriction
      OverloadedStrings
      QuasiQuotes
      RecordWildCards
      TemplateHaskell
      TupleSections
      TypeFamilies
      ViewPatterns
    build-depends:
        aeson
      , base
      , bytestring
      , classy-prelude
      , classy-prelude-conduit
      , classy-prelude-yesod
      , conduit
      , containers
      , data-default
      , directory
      , fast-logger
      , file-embed
      , hjsmin
      , http-conduit
      , monad-control
      , monad-logger
      , persistent
      , persistent-postgresql
      , persistent-template
      , safe
      , shakespeare
      , template-haskell
      , text
      , time
      , unordered-containers
      , vector
      , wai-extra
      , wai-logger
      , warp
      , yaml
      , yesod
      , yesod-auth
      , yesod-core
      , yesod-form
      , yesod-markdown
      , yesod-static

executable learnyou
    if flag(library-only)
      buildable: False
    main-is: main.hs
    hs-source-dirs: app
    build-depends: base, learnyou
    ghc-options: -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    ghc-options: -Wall
    extensions:
      CPP
      DeriveDataTypeable
      EmptyDataDecls
      FlexibleContexts
      GADTs
      GeneralizedNewtypeDeriving
      MultiParamTypeClasses
      NoImplicitPrelude
      NoMonomorphismRestriction
      OverloadedStrings
      QuasiQuotes
      TemplateHaskell
      TupleSections
      TypeFamilies
      ViewPatterns

    build-depends:
        base
      , classy-prelude                         
      , classy-prelude-yesod                   
      , hspec >= 2.0.0                         
      , learnyou                               
      , monad-logger                           
      , persistent                             
      , persistent-postgresql                  
      , resourcet                              
      , shakespeare                            
      , transformers                           
      , yesod                                  
      , yesod-core                             
      , yesod-test >= 1.4.3 && < 1.5

source-repository head
  type: git
  location: https://github.com/learnyou/learnyou.git
